# simargl

./: .gitignore  README.md  paper.md  pyproject.toml  setup.py
simargl/: __init__.py  config.py  embedder.py  indexer.py  mcp_server.py  searcher.py  utils.py
simargl.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
simargl/backends/: __init__.py  numpy_backend.py  postgres_backend.py
simargl/ingest/: __init__.py  db_manager.py  git_connector.py  task_extractor.py  task_fetcher.py
simargl/ingest/trackers/: __init__.py  github.py  gitlab.py  jira_api.py  jira_html.py  jira_selenium.py  youtrack.py
simargl/ui/: cli.py  gradio_app.py
tests/: conftest.py  test_indexer.py  test_searcher.py  test_utils.py
